--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
     "cloudinary": "^2.6.0",
     "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.9.1",
+    "framer-motion": "^12.16.0",
     "graphql": "^16.10.0",
+    "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.474.0",
     "multer": "^1.4.5-lts.2",
     "next": "15.1.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-css-spinners": "^4.0.2",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
